[gd_scene load_steps=4 format=3 uid="uid://cyitq5kv8jxom"]

[ext_resource type="Script" path="res://scenes/object_generator/object_generator.gd" id="1_2lr47"]
[ext_resource type="PackedScene" uid="uid://bth5myqhka12r" path="res://scenes/saw/saw.tscn" id="2_o4nfh"]
[ext_resource type="PackedScene" uid="uid://oe3nudqocct7" path="res://scenes/diamond/diamond.tscn" id="3_d0eyc"]

[node name="ObjectGenerator" type="Node2D"]
script = ExtResource("1_2lr47")
objects_to_generate = Array[PackedScene]([ExtResource("2_o4nfh"), ExtResource("3_d0eyc")])

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Position1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(138, -95)

[node name="Position2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(338, -95)

[node name="Position3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(538, -95)

[node name="Position4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(738, -95)

[node name="Position5" type="Marker2D" parent="SpawnPoints"]
position = Vector2(938, -95)

[node name="Position6" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1138, -95)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="GeneratedObjects" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
